# autosnapd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/autosnapd/: Cargo.toml
crates/autosnapd-core/: Cargo.toml
crates/autosnapd-core/src/: cfg.rs  lib.rs  receive_validation.rs  remote_command.rs  snapshot.rs  time_unit.rs
crates/autosnapd-ssh-command/: Cargo.toml
crates/autosnapd-ssh-command/src/: main.rs
crates/autosnapd/src/: main.rs  remote.rs  zfs.rs
src/: cfg.rs  clock.rs  main.rs  remote.rs  snapshot.rs  time_unit.rs  zfs.rs
