[package]
name = "autosnapd"
version = "0.2.1"
authors = ["Andrew Houts <ahouts4@gmail.com>"]
edition = "2021"

[dependencies]
toml = "0.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1.8"
regex = "1.5"
slice-group-by = "0.3"
futures = "0.3"
strum = "0.23"
strum_macros = "0.23"

[dependencies.smartstring]
version = "0.2"
features = ["serde"]

[dependencies.tokio]
version = "1.6"
features = ["rt", "time", "macros", "fs", "process", "io-util", "signal"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
mockall = "0.10"
