[workspace]
members = [
    "crates/autosnapd",
    "crates/autosnapd-core",
    "crates/autosnapd-ssh-command",
]
resolver = "3"

[workspace.package]
version = "0.7.0"
authors = ["Andrew Houts <ahouts4@gmail.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
blanket = "0.4"
chrono = "0.4"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
mockall = "0.14"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
slice-group-by = "0.3"
smartstring = { version = "1", features = ["serde"] }
structopt = "0.3"
strum = "0.28"
strum_macros = "0.28"
tempfile = "3"
tokio = { version = "1", features = ["rt", "time", "macros", "fs", "process", "io-util", "signal"] }
toml = "1"
