[package]
name = "autosnapd-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
smartstring.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
