[package]
name = "autosnapd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autosnapd-core = { path = "../autosnapd-core" }
anyhow.workspace = true
async-trait.workspace = true
blanket.workspace = true
chrono.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
slice-group-by.workspace = true
smartstring.workspace = true
structopt.workspace = true
strum.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
